Closed Bug 208862 Opened 22 years ago Closed 22 years ago

Popup blocker isn't fast enough or good enough for this page

Categories

(SeaMonkey :: UI Design, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.4final

People

(Reporter: netdragon, Assigned: danm.moz)

References

()

Details

Attachments

(2 files, 1 obsolete file)

2003050714 WinXP Steps to reproduce: 1. Go to http://www.catholicninjas.org/superfuntime/ with popup blocking disabled. 2. Close the window, and some popups come up giving you the "Popup manager" dialog box, and try to click yes. Expected results: You don't get any popups after clicking yes Actual results: Preferences window comes up and soon you have like 20 or more popup windows after clicking Yes, with more appearing constantly. Maybe all the popups is causing the browser to become unresponsive to you clicking Yes?
Neat site. Catchy tune.
Assignee: jaggernaut → danm
Target Milestone: --- → mozilla1.5alpha
This unlikely patch fixes the problem. catholicninjas isn't doing anything tricky; it just opens windows in the unload handler. We were allowing them to slip through because named windows that will open into an extant window aren't blocked, and because the popup windows were named "_blank", and because there was indeed an open window named "_blank". That last one is the bug. By the way I was able to reproduce this bug only using a new profile, or at least one that hasn't yet seen a popup window. Disabling popups after the popup cascade has already begun seems a necessary condition. Otherwise, they were blocked as expected.
Attachment #125342 - Flags: superreview?(jaggernaut)
Attachment #125342 - Flags: review?(mscott)
Comment on attachment 125342 [details] [diff] [review] don't name windows using reserved target names hang on. sounds like this patch will create an incompatibility with IE. better one's in the works.
Attachment #125342 - Flags: superreview?(jaggernaut)
Attachment #125342 - Flags: review?(mscott)
Like the previous patch except this one makes us behave like IE -- sigh. We won't name a window _blank (that's the important part), _self retains the original name, and _foo is as valid a name as any.
Attachment #125342 - Attachment is obsolete: true
Attachment #125355 - Flags: superreview?(mscott)
Attachment #125355 - Flags: review?(jst)
Comment on attachment 125355 [details] [diff] [review] don't name windows using reserved target names Looks gppd to me, take r= or sr= as needed
Comment on attachment 125355 [details] [diff] [review] don't name windows using reserved target names r/sr=jst
Attachment #125355 - Flags: review?(jst) → review+
Putting on the 1.4 blocking list
Flags: blocking1.4+
Comment on attachment 125355 [details] [diff] [review] don't name windows using reserved target names I'd still like mscott to sr= this, but I can stamp sr=brendan@mozilla.org in case that helps get it landed in the branch for tomorrow's builds. Danm, you around? /be
Attachment #125355 - Flags: superreview?(mscott) → superreview+
Comment on attachment 125355 [details] [diff] [review] don't name windows using reserved target names a=dveditz for drivers
Attachment #125355 - Flags: superreview?
Attachment #125355 - Flags: superreview+
Attachment #125355 - Flags: approval1.4+
checked in on the 1.4 branch, but not yet on the trunk
Status: NEW → ASSIGNED
Target Milestone: mozilla1.5alpha → mozilla1.4final
Attached file window naming testcase
Not what this bug was originally about, but the reason it got fasttracked into the branch. Here's the testcase I've been using; I figure it'll save someone a minute's effort. Unpatched builds do disappointing things.
Updating qa contact to sarah Adding keyword fixed1.4, since this has landed on the branch
Keywords: fixed1.4
QA Contact: paw → sairuh
Comment on attachment 125355 [details] [diff] [review] don't name windows using reserved target names Restoring the sr request specifically for docshell sr mscott. The bug already has reviews from three sr people but we wanted him as well.
Attachment #125355 - Flags: superreview? → superreview?(mscott)
vrfy'd fixed on the branch (tested on win2k and linux rh8.0, 2003.06.11-1.4 commercial) --i can set the pref to block the popups.
Keywords: fixed1.4verified1.4
OS: Windows XP → All
Hardware: PC → All
Comment on attachment 125355 [details] [diff] [review] don't name windows using reserved target names so we want to only set the name on the docshell if the window is new. That seems ok to me.
Attachment #125355 - Flags: superreview?(mscott) → superreview+
Thanks all. Patch is checked in on the trunk and the 1.4 branch. I believe the bug is fixed, though there's some question since I had to modify the original steps to reproduce. There's still a more general and similar case which is not fixed. For that see bug 209134.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
This change caused regression bug 209082. It seems to cause that unnamed new windows are no longer called "_blank", which breaks the assumption of some existing code.
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: