don't name windows using reserved target names. bug 208862 r=jag,jst,mscott